--- a/doc/man/po4a/po/ja.po
+++ b/doc/man/po4a/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 5.0.1\n"
-"POT-Creation-Date: 2022-03-28 19:05+0200\n"
+"POT-Creation-Date: 2022-07-09 10:51+0200\n"
 "PO-Revision-Date: 2021-07-10 11:49+0200\n"
 "Last-Translator: YOSHIDUMI, Rentaro\n"
 "Language-Team: Japanese (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ja/)\n"
@@ -37,7 +37,7 @@ msgstr "34.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2022-03-13"
+msgid "2022-05-22"
 msgstr ""
 
 #. type: Content of the mkvmerge entity
@@ -1777,7 +1777,9 @@ msgstr "雛形では幾つかの変数が使用でき，それらは楽章が生
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:311
-msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name wihtout respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
+#, fuzzy
+#| msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name wihtout respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
+msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name without respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
 msgstr "文字列 '<literal>&lt;FILE_NAME&gt;</literal>' および '<literal>&lt;FILE_NAME_WITH_EXT&gt;</literal>' は追加ファイルに対して楽章を生成した場合にのみ置換されます。それぞれ追加したファイルの名前の拡張子を含まないもの，含むものに置き換わります。注意: ファイルの基底名と拡張子が挿入されるだけで，そのディレクトリやドライブ構成は挿入されません。"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
@@ -3603,7 +3605,7 @@ msgstr "<literal>json</literal>形式は機械可読なJSON表現を出力しま
 #: doc/man/mkvmerge.xml:2147
 #, fuzzy
 #| msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v12.json\"><literal>mkvmerge-identification-output-schema-v12.json</literal></ulink>"
-msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v14.json\"><literal>mkvmerge-identification-output-schema-v14.json</literal></ulink>"
+msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
 msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v12.json\"><literal>mkvmerge-identification-output-schema-v12.json</literal></ulink>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
