--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -13,7 +13,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 "X-Generator: Poedit 1.8.1\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
@@ -37,10 +37,8 @@ msgstr "68.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-03-13"
 msgid "2022-05-22"
-msgstr "2022-03-13"
+msgstr "2022-05-22"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
