--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (69.0.0-0~bunkus01) jammy; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sat, 09 Jul 2022 18:19:02 +0200
+
 mkvtoolnix (68.0.0-0~bunkus01) jammy; urgency=low
 
   * New version.
