man page translations: update Chinese Simplified (China)

--- a/doc/man/po4a/po/zh_CN.po
+++ b/doc/man/po4a/po/zh_CN.po
@@ -36,10 +36,8 @@ msgstr "69.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-03-13"
 msgid "2022-05-22"
-msgstr "2022-03-13"
+msgstr "2022-05-22"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1776,10 +1774,8 @@ msgstr "模板中可以使用多个变量，这些变量将在生成章节时被
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:311
-#, fuzzy
-#| msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name wihtout respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
 msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name without respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
-msgstr "字符串“<literal>&lt;FILE_NAME&gt;</literal>”与“<literal>&lt;FILE_NAME_WITH_EXT&gt;</literal>” 仅在为追加文件生成章节时被填充。它们会被替换为追加文件的名称，分别省略扩展名、包含扩展名。注意只会插入文件的基本名称与扩展名，不包括其目录或盘符。"
+msgstr "字符串 ｢<literal>&lt;FILE_NAME&gt;</literal>｣ 与 ｢<literal>'&lt;FILE_NAME_WITH_EXT&gt;</literal>｣ 只会在为追加文件生成章节时进行填充。 它们会被替换为追加文件的文件名，前者不含扩展名，后者包含扩展名。 注意，只会插入文件本身的名称（及扩展名），不会插入其目录名或盘符。"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:317
@@ -3251,7 +3247,7 @@ msgstr "视频的传输特征。"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1905
 msgid "<constant>0</constant>: reserved, <constant>1</constant>: ITU-R BT.709, <constant>2</constant>: unspecified, <constant>3</constant>: reserved, <constant>4</constant>: gamma 2.2 curve, <constant>5</constant>: gamma 2.8 curve, <constant>6</constant>: SMPTE 170M, <constant>7</constant>: SMPTE 240M, <constant>8</constant>: linear, <constant>9</constant>: log, <constant>10</constant>: log sqrt, <constant>11</constant>: IEC 61966-2-4, <constant>12</constant>: ITU-R BT.1361 extended color gamut, <constant>13</constant>: IEC 61966-2-1, <constant>14</constant>: ITU-R BT.2020 10 bit, <constant>15</constant>: ITU-R BT.2020 12 bit, <constant>16</constant>: SMPTE ST 2084, <constant>17</constant>: SMPTE ST 428-1; <constant>18</constant>: ARIB STD-B67 (HLG)"
-msgstr "<constant>0</constant>: 保留, <constant>1</constant>: ITU-R BT.709, <constant>2</constant>: unspecified, <constant>3</constant>: 保留, <constant>4</constant>: gamma 2.2 曲线, <constant>5</constant>: gamma 2.8 曲线, <constant>6</constant>: SMPTE 170M, <constant>7</constant>: SMPTE 240M, <constant>8</constant>: 线性, <constant>9</constant>: 对数, <constant>10</constant>: 对数平方根, <constant>11</constant>: IEC 61966-2-4, <constant>12</constant>: ITU-R BT.1361 extended color gamut, <constant>13</constant>: IEC 61966-2-1, <constant>14</constant>: ITU-R BT.2020 10 bit, <constant>15</constant>: ITU-R BT.2020 12 bit, <constant>16</constant>: SMPTE ST 2084, <constant>17</constant>: SMPTE ST 428-1; <constant>18</constant>: ARIB STD-B67 (HLG)"
+msgstr "<constant>0</constant>: 保留, <constant>1</constant>: ITU-R BT.709, <constant>2</constant>: 未指定, <constant>3</constant>: 保留, <constant>4</constant>: gamma 2.2 曲线, <constant>5</constant>: gamma 2.8 曲线, <constant>6</constant>: SMPTE 170M, <constant>7</constant>: SMPTE 240M, <constant>8</constant>: 线性, <constant>9</constant>: 对数, <constant>10</constant>: 对数平方根, <constant>11</constant>: IEC 61966-2-4, <constant>12</constant>: ITU-R BT.1361 扩展色域, <constant>13</constant>: IEC 61966-2-1, <constant>14</constant>: ITU-R BT.2020 10 位, <constant>15</constant>: ITU-R BT.2020 12 位, <constant>16</constant>: SMPTE ST 2084, <constant>17</constant>: SMPTE ST 428-1; <constant>18</constant>: ARIB STD-B67 (HLG)"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1916
@@ -3480,10 +3476,8 @@ msgstr "<literal>json</literal> 格式输出机器可读的 JSON 表达式。此
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2147
-#, fuzzy
-#| msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v14.json\"><literal>mkvmerge-identification-output-schema-v14.json</literal></ulink>"
 msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
-msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v14.json\"><literal>mkvmerge-identification-output-schema-v14.json</literal></ulink>"
+msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2151
