--- a/po/ca.po
+++ b/po/ca.po
@@ -9381,9 +9381,9 @@ msgid "Nu&mber of entries to create:"
 msgstr "No&mbre d'entrades a crear:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of &recently used entries to remember:"
-msgstr "&Nombre d'entrades a tornar a numerar:"
+msgstr "Nombre d'entrades d'ús &recent que es recordaran:"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:314
 #, no-c-format
