program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -287,9 +287,8 @@ msgid ""
 "                           unspecified.\n"
 msgstr ""
 "  --color-bits-per-channel <TID:n>\n"
-"                           Imposta il numero di bit codificati per un canale\n"
-"                           colore. Un valore 0 indica che il numero è non\n"
-"                           specificato.\n"
+"                           Imposta il numero di bit codificati per un canale colore.\n"
+"                           Un valore 0 indica che il numero è non                    specificato.\n"
 
 #: src/merge/mkvmerge.cpp:311
 #, no-c-format
@@ -14658,7 +14657,7 @@ msgstr "Informazioni colore video"
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
 msgid "Video color mastering metadata"
-msgstr "Metadati principale colore video"
+msgstr "Metadati principali colore video"
 
 #: src/common/property_element.cpp:162
 #, no-c-format
