--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9247,9 +9247,9 @@ msgid "Nu&mber of entries to create:"
 msgstr "新建条目数量(&M):"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of &recently used entries to remember:"
-msgstr "要重新编号的条目数目(&N):"
+msgstr "要保留的最近使用条目数目(&R):"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:314
 #, no-c-format
