man page translations: update Catalan

--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -38,10 +38,8 @@ msgstr "69.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-03-13"
 msgid "2022-05-22"
-msgstr "13/03/2022"
+msgstr "22/05/2022"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1778,10 +1776,8 @@ msgstr "Hi ha diverses variables que es poden usar a la plantilla que seran subs
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:311
-#, fuzzy
-#| msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name wihtout respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
 msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name without respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
-msgstr "Les cadenes <literal>«&lt;FILE_NAME&gt;»</literal> i <literal>«&lt;FILE_NAME_WITH_EXT&gt;»</literal>, que només funcionen quan es generen capítols per a fitxers adjunts. Seran, respectivament substituïdes pel nom del fitxer adjuntat, amb la seva extensió i sense. Recordeu que només s'inseriran el nom base del fitxer i l'extensió, no el seu directori o components de la unitat."
+msgstr "Les cadenes <literal>«&lt;FILE_NAME&gt;»</literal> i <literal>«&lt;FILE_NAME_WITH_EXT&gt;»</literal>, que només funcionen quan es generen capítols per a fitxers adjunts. Seran, respectivament substituïdes pel nom del fitxer adjuntat, amb la seva extensió i sense. Recordeu que només s'inseriran el nom base i l'extensió del fitxer, no el seu directori o components de la unitat."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:317
@@ -2056,7 +2052,7 @@ msgstr "En la forma canònica, totes les subetiquetes per a les quals existeixen
 #: doc/man/mkvmerge.xml:573
 #: doc/man/mkvpropedit.xml:416
 msgid "For the extended language subtags form the canonical form is built first. Afterwards all primary languages for which an extended language subtag exists are replaced by that extended language subtag and its prefix. This converts e.g. '<literal>yue-jyutping</literal>' back to '<literal>zh-yue-jyutping</literal>' but has no effect on '<literal>fr-FR</literal>' as '<literal>fr</literal>' is not an extended language subtag."
-msgstr ""
+msgstr "Per a la forma de les subetiquetes d'idioma estès, primer es construeix la forma canònica. Després, tots els idiomes principals per als quals existeix una subetiqueta d'idioma estès se substitueixen per aquesta subetiqueta i el seu prefix d'idioma estès. Això converteix, p. ex. «<literal>yue-jyutping</literal>» torna a «<literal>zh-yue-jyutping</literal>», però no té cap efecte sobre «<literal>fr-FR</literal>» ja que «<literal>fr</literal>» no és una subetiqueta d'idioma estès."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:584
@@ -3482,10 +3478,8 @@ msgstr "La sortida del format <literal>json</literal>  és una representació JS
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2147
-#, fuzzy
-#| msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v14.json\"><literal>mkvmerge-identification-output-schema-v14.json</literal></ulink>"
 msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
-msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v14.json\"><literal>mkvmerge-identification-output-schema-v14.json</literal></ulink>"
+msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2151
@@ -5168,27 +5162,27 @@ msgstr "Aquesta opció no afectarà els canvis sol·licitats mitjançant la prop
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvpropedit.xml:423
 msgid "This normalization is only applied to elements that are actually changed:"
-msgstr ""
+msgstr "Aquesta normalització només s'aplica als elements que realment es modifiquen:"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><itemizedlist><listitem><para>
 #: doc/man/mkvpropedit.xml:429
 msgid "When editing track headers only those track language elements that are set via edit specifications are affected. Languages of tracks that aren't edited aren't changed. Editing a track but setting only properties other than the language won't affect the language either."
-msgstr ""
+msgstr "Quan editeu les capçaleres de les pistes, només es veuran afectats els elements d'idioma de les pistes que s'estableixen mitjançant especificacions d'edició. Els idiomes de les pistes que no s'editen no es canviaran. L'edició d'una pista, però configurant només propietats diferents de l'idioma, tampoc no afectarà a l'idioma."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><itemizedlist><listitem><para>
 #: doc/man/mkvpropedit.xml:437
 msgid "When editing chapters all language elements of all chapter elements are affected as existing chapters are always fully replaced."
-msgstr ""
+msgstr "Quan editeu els capítols, es veuran afectats tots els elements d'idioma de tots els elements del capítol, ja que els capítols existents sempre se substitueixen completament."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><itemizedlist><listitem><para>
 #: doc/man/mkvpropedit.xml:443
 msgid "When editing tags only the language elements of the tags that are actually replaced are affected. For example, when you replace global tags then existing track tags aren't affected."
-msgstr ""
+msgstr "Quan editeu les etiquetes, només es veuran afectats els elements d'idioma de les etiquetes que realment se substitueixen. Per exemple, quan substituïu les etiquetes globals, les etiquetes de pista existents no es veuran afectades."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvpropedit.xml:450
 msgid "The best way to normalize all existing language tags in a file is to remux it with &mkvmerge; and set its '<literal>--normalize-language-ietf</literal>' option to the desired mode."
-msgstr ""
+msgstr "La millor manera de normalitzar totes les etiquetes d'idioma existents en un fitxer és fer un multiplexat amb &mkvmerge; i establir la seva opció «<literal>--normalize-language-ietf</literal>» al mode desitjat."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvpropedit.xml:480
