man page translations: update Spanish

--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.0.0\n"
 "POT-Creation-Date: 2022-07-09 10:51+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: overdrive80 <lukillas.ole@gmail.com>, 2016-2022\n"
+"Last-Translator: Overdrive80 <lukillas.ole@gmail.com>, 2022\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/es/)\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -1781,10 +1781,8 @@ msgstr "Hay diversas variables que se pueden usar en la plantilla que son reempl
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:311
-#, fuzzy
-#| msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name wihtout respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
 msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name without respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
-msgstr "Las cadenas de texto <literal>'&lt;FILE_NAME&gt;'</literal> y <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> sólo serán establecidas cuando se generen capítulos para los archivos unidos. Serán reemplazadas por el nombre de los archivos unidos sin sus extensiones. Tenga en cuenta, que sólo se inserta el nombre del archivo y su extensión, descartando la ruta y la unidad. "
+msgstr "Las cadenas <literal>'&lt;FILE_NAME&gt;'</literal> y <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> sólo se rellenan cuando se generan capítulos para los archivos anexados. Serán reemplazados por el nombre del archivo anexado con su extensión, no respectivamente. Tenga en cuenta que sólo se insertan el nombre base y la extensión del archivo, no sus componentes de directorio o unidad."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:317
@@ -3496,10 +3494,8 @@ msgstr "El formato<literal>json</literal> genera una representación JSON legibl
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2147
-#, fuzzy
-#| msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v14.json\"><literal>mkvmerge-identification-output-schema-v14.json</literal></ulink>"
 msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
-msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v14.json\"><literal>mkvmerge-identification-output-schema-v14.json</literal></ulink>"
+msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2151
