program translations: update Bulgarian

--- a/po/bg.po
+++ b/po/bg.po
@@ -3955,9 +3955,9 @@ msgid "Bits per channel"
 msgstr "Бита на канал"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Bits per color channel:"
-msgstr "Бита на канал"
+msgstr "Битове на цветови канал:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
@@ -4054,12 +4054,12 @@ msgstr ""
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
 msgid "Blue color coordinate x"
-msgstr "Координата x на синия цвят"
+msgstr "Координата X на синия цвят"
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
 msgid "Blue color coordinate y"
-msgstr "Координата y на синия цвят"
+msgstr "Координата Y на синия цвят"
 
 #: src/input/r_vobsub.cpp:549
 #, no-c-format
@@ -4736,27 +4736,27 @@ msgstr "Цветова информация"
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, no-c-format
 msgid "Color mastering meta information"
-msgstr ""
+msgstr "Метаданни за мастеринг на цветовете"
 
 #: src/common/kax_element_names.cpp:125
 #, no-c-format
 msgid "Color matrix coefficients"
-msgstr ""
+msgstr "Коефициенти на цветова матрица"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Color matrix coefficients:"
-msgstr "Цветови основи"
+msgstr "Цветова матрица (коефициенти):"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
 msgid "Color primaries"
-msgstr "Цветови основи"
+msgstr "Цветови основи (color primaries)"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Color primaries:"
-msgstr "Цветови основи"
+msgstr "Цветови основи:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
@@ -4764,9 +4764,9 @@ msgid "Color range"
 msgstr "Цветова гама"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Color range:"
-msgstr "Цветова гама"
+msgstr "Цветова гама:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
@@ -6911,12 +6911,12 @@ msgstr ""
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
 msgid "Green color coordinate x"
-msgstr ""
+msgstr "Координата X на зеления цвят"
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
 msgid "Green color coordinate y"
-msgstr ""
+msgstr "Координата Y на зеления цвят"
 
 #: src/common/file_types.cpp:89
 #, no-c-format
@@ -8481,7 +8481,7 @@ msgstr ""
 #: src/common/kax_element_names.cpp:121
 #, no-c-format
 msgid "Maximum luminance"
-msgstr ""
+msgstr "Максимална осветеност (luminance)"
 
 #: src/common/property_element.cpp:194
 #, no-c-format
@@ -8489,9 +8489,9 @@ msgid "Maximum luminance in candelas per square meter (cd/m²)."
 msgstr ""
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2223
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum luminance:"
-msgstr "Максимален кеш"
+msgstr "Максимална осветеност:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2254
 #, no-c-format
@@ -8534,7 +8534,7 @@ msgstr "Минимален кеш"
 #: src/common/kax_element_names.cpp:122
 #, no-c-format
 msgid "Minimum luminance"
-msgstr ""
+msgstr "Минимална осветеност (luminance)"
 
 #: src/common/property_element.cpp:195
 #, no-c-format
@@ -8542,9 +8542,9 @@ msgid "Minimum luminance in candelas per square meter (cd/m²)."
 msgstr ""
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2226
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Minimum luminance:"
-msgstr "Минимален кеш"
+msgstr "Минимална осветеност:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2178
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2240
@@ -10200,12 +10200,12 @@ msgstr ""
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
 msgid "Red color coordinate x"
-msgstr ""
+msgstr "Координата X на червения цвят"
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
 msgid "Red color coordinate y"
-msgstr ""
+msgstr "Координата Y на червения цвят"
 
 #: src/common/cli_parser.cpp:193
 #, no-c-format
@@ -10788,7 +10788,7 @@ msgstr "Избери всички пътечки от конкретен &тип
 #: src/mkvtoolnix-gui/merge/output.cpp:207
 #, no-c-format
 msgid "Select an existing Matroska or WebM file and the GUI will add its segment UID to the input field on the left."
-msgstr ""
+msgstr "Избери съществуващ Matroska или WebM файл и програмата ще добави неговото UID на сегмента в полето за въвеждане вляво."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:397
 #, no-c-format
@@ -14567,7 +14567,7 @@ msgstr "Видео пътечка %1"
 #: src/common/property_element.cpp:171
 #, no-c-format
 msgid "Video: bits per color channel"
-msgstr ""
+msgstr "Видео: битове на цветови канал"
 
 #: src/common/property_element.cpp:190
 #, no-c-format
@@ -14602,7 +14602,7 @@ msgstr ""
 #: src/common/property_element.cpp:170
 #, no-c-format
 msgid "Video: color matrix coefficients"
-msgstr ""
+msgstr "Видео: коефициенти на цветова матрица"
 
 #: src/common/property_element.cpp:180
 #, no-c-format
@@ -14642,12 +14642,12 @@ msgstr ""
 #: src/common/property_element.cpp:194
 #, no-c-format
 msgid "Video: maximum luminance"
-msgstr ""
+msgstr "Видео: максимална осветеност"
 
 #: src/common/property_element.cpp:195
 #, no-c-format
 msgid "Video: minimum luminance"
-msgstr ""
+msgstr "Видео: минимална осветеност"
 
 #: src/common/property_element.cpp:200
 #, no-c-format
@@ -14954,9 +14954,9 @@ msgid "White color coordinate y"
 msgstr "Координата Y на белия цвят"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "White color coordinates:"
-msgstr "Координата X на белия цвят"
+msgstr "Координати на белия цвят:"
 
 #: src/common/property_element.cpp:154
 #, no-c-format
